--- a/doc/src/notifications.dox
+++ b/doc/src/notifications.dox
@@ -53,12 +53,9 @@ From the above example it comes obvious that notification actions are applicatio
 \note
 The format of the action URI is not yet specified!
 
-\subsection imageURI Image URI
+\subsection image Image
 
-Specifies an image that is related to the notification. Usually this means that the image is shown in a graphical representation of the notification. The image URI can be a logical name like 'Icon-messages' or a path identifier to an image file (e.g. <em>%file:///usr/share/pixmaps/foo.png</em>).
-
-\note
-The format of the image URI is not yet fully specified!
+Specifies an image that is related to the notification. Usually this means that the image is shown in a graphical representation of the notification. The image parameter can be a logical name like 'Icon-messages' or an absolute path to an image file (e.g. <em>%/usr/share/pixmaps/foo.png</em>).
 
 \subsection persistence Persistence
 
