Changes: Allow a widget to request cursor visibility
RevBy: Pekka Vuorela, Dominik Kapusta
Details: The MSceneManager's private slot for ensuring cursor visibility has
been made public, with the according changes in MTextEdit. This allows other
widgets beside text edits to make use of this functionality.

--- a/doc/src/news.dox
+++ b/doc/src/news.dox
@@ -1,4 +1,13 @@
 /*! \page news What's New in DirectUI
+
+\section v0202
+
+\subsection New
+
+- MSceneManager now allows a widget to request cursor visibility directly via
+ the ensureCursorVisible() slot.
+
+
 \section v0200
 
 \subsection New
